fix(InventoryItemServiceImpl.java): empty product+facility
Signed-off-by: Hien Hoang <hienhoang2702@gmail.com>