@@ -243,6 +243,9 @@ public class InventoryItemServiceImpl implements InventoryItemService {
                 productFacility.getLastInventoryCount() - quantity; // remain total inventory count"
 
             List<InventoryItem> selectedInventoryItems = inventoryItemsMap.get(Arrays.asList(facilityId, productId));
+            if (selectedInventoryItems == null) {
+                continue;
+            }
             selectedInventoryItems.sort(Comparator.comparingInt(InventoryItem::getQuantityOnHandTotal));
 
             for (InventoryItem inventoryItem : selectedInventoryItems) {
@@ -485,13 +488,15 @@ public class InventoryItemServiceImpl implements InventoryItemService {
         List<Facility> queryFacilities
     ) {
         Map<List<String>, List<InventoryItem>> inventoryItemsMap = new HashMap<>();
-        inventoryItemRepo.findAllByProductInAndFacilityInAndQuantityOnHandTotalGreaterThan(
-            queryProducts, queryFacilities, 0).forEach(inventoryItem ->
-                                                           inventoryItemsMap.computeIfAbsent(
-                                                               Arrays.asList(
-                                                                   inventoryItem.getFacility().getFacilityId(),
-                                                                   inventoryItem.getProduct().getProductId()),
-                                                               key -> new ArrayList<>()).add(inventoryItem));
+        inventoryItemRepo
+            .findAllByProductInAndFacilityInAndQuantityOnHandTotalGreaterThan(queryProducts, queryFacilities, 0)
+            .forEach(inventoryItem -> inventoryItemsMap
+                .computeIfAbsent(
+                    Arrays.asList(
+                        inventoryItem.getFacility().getFacilityId(),
+                        inventoryItem.getProduct().getProductId()),
+                    key -> new ArrayList<>())
+                .add(inventoryItem));
         return inventoryItemsMap;
     }
 
@@ -561,13 +566,11 @@ public class InventoryItemServiceImpl implements InventoryItemService {
     @Override
     public List<InventoryModel.ExportDetail> getInventoryExportList(String facilityId) {
         List<ShipmentItem> shipmentItems = shipmentItemRepo.findAllByFacility(new Facility(facilityId));
-        List<InventoryItemDetail> inventoryItemDetails = inventoryItemDetailRepo.findAllByOrderItemIn(shipmentItems
-                                                                                                          .stream()
-                                                                                                          .map(
-                                                                                                              ShipmentItem::getOrderItem)
-                                                                                                          .collect(
-                                                                                                              Collectors
-                                                                                                                  .toList()));
+        List<InventoryItemDetail> inventoryItemDetails =
+            inventoryItemDetailRepo.findAllByOrderItemIn(shipmentItems
+                                                             .stream()
+                                                             .map(ShipmentItem::getOrderItem)
+                                                             .collect(Collectors.toList()));
         return inventoryItemDetails
             .stream()
             .map(InventoryItemDetail::toInventoryExportDetail)
